Addressed all the comments